# greenseer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  jobmatch-brief.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/scripts/: install-sidecar.mjs  round-dock-icon.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: jobmatch-sidecar-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
apps/desktop/src/components/: DocumentPreview.tsx  ErrorBoundary.tsx  JobDetailPanel.tsx  OnboardingWizard.tsx  StructuredCvEditor.tsx
apps/desktop/src/hooks/: useSettings.ts  useSidecarHealth.ts  useTheme.ts
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: ActivityLog.tsx  CvManager.tsx  Generator.tsx  JobFeed.tsx  LinkedInOptimizer.tsx  Projects.tsx  Settings.tsx  Sponsors.tsx  Tracker.tsx
apps/sidecar/: .env.example  esbuild.config.mjs  package.json  tsconfig.build.tsbuildinfo  tsconfig.json
apps/sidecar/prisma/: schema.prisma  seed.ts
apps/sidecar/scripts/: copy-prisma-engine.mjs
apps/sidecar/src/: app.controller.ts  app.module.ts  keystore.service.ts  main.ts
(+72 files in other folders)
